Feat: Added response status enum and fix the resume service and controller